# markoun

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  README_CN.md  nginx.conf  poe_tasks.toml  pyproject.toml  pytest.ini  ruff.toml  semantic.toml  welcome.md
.github/workflows/: dev-ci.yaml  main-ci.yaml
scripts/: entrypoint.sh
src/markoun/: main.py
src/markoun/app/api/: deps.py  routers.py
src/markoun/app/api/endpoints/: directory.py  file.py  item.py  (+3 more)
src/markoun/app/services/: dir_service.py  file_service.py  item_service.py  system_service.py  user_service.py  workspace_service.py
src/markoun/app/utils/: constant.py  errors.py  events.py  security.py
src/markoun/common/: config.py  decorator.py  logging.py  util.py
src/markoun/core/db/: models.py  session.py
src/markoun/core/model/: base.py  file.py  user.py
tests/: conftest.py
tests/api/: test_file.py  test_item.py  test_optional_auth.py  test_search.py  test_system.py  test_user.py  test_workspace_isolation.py
web/: .env.example  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.vue  main.ts  shims-vue.d.ts
web/src/api/: dir.ts  file.ts  item.ts  system.ts  user.ts
web/src/assets/styles/: main.css  workspace.css
web/src/components/: FileNodeComp.vue  FileTreeComp.vue  FsNodeComp.vue  NoteEditorComp.vue  SettingComp.vue  SidebarComp.vue
web/src/components/base/: AsyncGate.vue  BaseHeader.vue  BaseIconText.vue  BaseModal.vue  BaseSkeleton.vue  BaseTooltip.vue  FilledInput.vue  GhostButton.vue  UnderlinedInput.vue
web/src/components/common/: BaseHeader.vue  BaseModal.vue  GhostButton.vue  InputField.vue  InputUnderline.vue  Notification.vue  SettingItem.vue  TextHint.vue
web/src/components/editor/: EditorInspectorPanel.vue  NoteEditor.vue  NoteEditorHeader.vue  NoteInspectorPanels.vue
web/src/components/modals/: CreateDirModal.vue  CreateNoteModal.vue  DeleteItemModal.vue  RegisterModal.vue  UploadFileModal.vue
web/src/components/sidebar/: Sidebar.vue  SidebarFileTree.vue  SidebarFileTreeItem.vue  SidebarFileTreeNodeRow.vue  SidebarFileTreeSkeleton.vue  SidebarSearch.vue  SidebarSearchResults.vue  SidebarSetting.vue  SidebarSettingAppearance.vue  SidebarSettingItem.vue  SidebarSettingTheme.vue  SidebarUser.vue  SidebarUserProfile.vue  SidebarUserSecurity.vue
web/src/composables/: useActionLedger.ts  useAsyncGate.ts  useCompactLayout.ts  useDelayedVisibility.ts  useDirectoryFileDrop.ts  useFileContentSearch.ts  useFileTreeDropTarget.ts  useFileTreeItemExpansion.ts  useFileTreeItemRename.ts  useFileTreeNodeDrag.ts  useFileUploadTask.ts  useHeightMotion.ts  useImagePreviewSize.ts  useMarkdownPasteUpload.ts  useMediaQuery.ts  useModelProxy.ts  useResizablePane.ts  useTooltipPosition.ts  useViewportSize.ts
web/src/constants/: appearance.ts  layout.ts  note.ts  search.ts  theme.ts  ui.ts
web/src/layouts/: AuthLayout.vue  EditorLayout.vue  ModalContentLayout.vue  SidebarLayout.vue  SidebarPanelLayout.vue  WorkspaceLayout.vue  useResponsivePane.ts  workspace-context.ts
web/src/router/: auth.ts  index.ts
web/src/scripts/: mock.ts  types.ts
web/src/scripts/stores/: note.ts  notice.ts  system.ts  user.ts
web/src/scripts/utils/: markdown.ts  request.ts  util.ts
web/src/stores/: appearance.ts  note.ts  notice.ts  system.ts  theme.ts  toast.ts  user.ts
web/src/stores/note/: current-file-state.ts  file-tree-state.ts
web/src/types/: api.ts  async.ts  auth.ts  file-system.ts  system.ts  types.ts  ui.ts
web/src/utils/: api-url.ts  css-vars.ts  css.ts  datetime.ts  file-node.ts  file-system.ts  katex.ts  markdown.ts  request.ts
web/src/views/: Login.vue  Workspace.vue
(+29 files in other folders)
