[project]
name = "markoun"
version = "0.2.2"
description = "A file-based Markdown editor"
authors = [{ name = "tropicalalgae", email = "tropicalalgae@gmail.com" }]
requires-python = ">=3.13"
readme = "README.md"
license = "MIT"
dependencies = [
  "fastapi>=0.139.2,<0.140",
  "uvicorn>=0.51.0,<0.52",
  "pydantic[email]>=2.13.4,<3",
  "loguru>=0.7.3,<0.8",
  "pydantic-settings>=2.14.2,<3",
  "pyyaml>=6.0.3,<7",
  "pymysql>=1.2.0,<2",
  "sqlalchemy>=2.0.51,<3",
  "passlib==1.7.4",
  "python-jose>=3.5.0,<4",
  "sqlmodel>=0.0.39,<0.1",
  "python-multipart>=0.0.32,<0.1",
  "aiosqlite>=0.22.1,<0.23",
  "asyncmy>=0.2.11,<0.3",
  "cryptography>=49.0.0,<50",
  "aiofiles>=25.1.0,<26",
]

[project.urls]
Repository = "https://github.com/tropical-algae/markoun.git"


[dependency-groups]
dev = [
  "pytest>=9.1.1,<10",
  "pytest-cov>=7.1.0,<8",
  "pytest-ordering>=0.6,<0.7",
  "httpx2>=2.7.0,<3",
  "ipdb>=0.13.0,<0.14",
  "mypy>=2.3.0,<3",
  "ruff>=0.15.22,<0.16",
  "types-pyyaml>=6.0.12.20240724,<7",
  "sqlacodegen>=4.0.4,<5",
  "pre-commit>=4.6.1,<5",
  "poethepoet>=0.48.0,<0.49",
  "types-aiofiles>=25.1.0.20251011",
]
release = ["python-semantic-release>=10.6.1,<11"]
aws = ["mangum>=0.21.0,<0.22"]

[tool.uv]
default-groups = ["dev", "release", "aws"]

[[tool.uv.index]]
name = "proxy-source"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"


[tool.hatch.build.targets.sdist]
include = ["src/markoun"]

[tool.hatch.build.targets.wheel]
include = ["src/markoun"]

[tool.hatch.build.targets.wheel.sources]
"src/markoun" = "markoun"


[tool.poe]
include = "poe_tasks.toml"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
